getAuthorDuplicatedAndNotTimestamp() endpoint has been added
